--- a/manifest.json
+++ b/manifest.json
@@ -4,8 +4,8 @@
 	"version": "1.0.1",
 	"minAppVersion": "0.15.0",
 	"description": "This is a plugin that provides various callouts.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"author": "Choi jisoo",
+	"authorUrl": "",
+	"fundingUrl": "",
 	"isDesktopOnly": false
 }
