--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
 	"version": "2.0.1",
 	"minAppVersion": "0.15.0",
 	"description": "This is a plugin that provides various callouts.",
-	"author": "Choi jisoo",
+	"author": "Jisoo Choi",
 	"authorUrl": "",
 	"fundingUrl": "",
 	"isDesktopOnly": false
